--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -23,6 +23,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 0 15px;
   font-weight: $font-weight-bold;
   color: $color-title;
+  line-height: 1.5em;
 }
 h1 {
   font-size: 36px;
