--- a/scss/elementor/elementor.scss
+++ b/scss/elementor/elementor.scss
@@ -9,6 +9,12 @@
 /* Slider */
 @import "slides";
 
+/* Text Box */
+@import "text-box";
+
+/* Best Selling Products */
+@import "best-selling-products";
+
 /* Posts Grid */
 @import "post-grid";
 
