--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,8 @@
 /*
 Theme Name: Nha Khoa
-Theme URI: http://hungkv.com/
-Author: DiepLK
-Author URI: https://www.facebook.com/lathieuhiep
+Theme URI: https://lahavietnam.com/
+Author: LAHA VIET NAM
+Author URI: https://www.facebook.com/lahaco.vn/
 Version: 1.0.0
 Description: Nha Khoa
 License: GNU General Public License v2 or later
@@ -17,6 +17,7 @@ Text Domain: nhakhoa
 # General
 # WordPress Core
 # Header
+  ## Header Top
   ## Information
 # Navigation
   ## Nav Top
@@ -28,6 +29,8 @@ Text Domain: nhakhoa
   ## Comment
 # Elementor
   ## Slider
+  ## Text Box
+  ## Best Selling Products
   ## Posts Grid
   ## Posts Carousel
 # Woocommerce
