--- a/scss/variables-site/_color.scss
+++ b/scss/variables-site/_color.scss
@@ -1,11 +1,14 @@
 // Color
-$color-primary: #777777;
-$color-title: #333333;
-$color-hover: #ff5555;
+$color-primary: #626262;
+$color-second: #333333;
+$color-title: #161922;
+$color-link: #0095eb;
+$color-hover: #007cc3;
 
 // Background
-$background-primary: #333333;
-$background-hover: #ff5555;
+$background-primary: #0095eb;
+$background-second: #333333;
+$background-hover: #007cc3;
 
 // Border color
-$border-color: #eeeeee;
+$border-color: #c7d7e0;
