--- a/scss/shop/_archive_shop.scss
+++ b/scss/shop/_archive_shop.scss
@@ -1,125 +1,191 @@
+body {
+  &.admin-bar {
+    .shop-cart-view {
+      .cart-view-box-widget {
+        top: 32px;
+      }
+    }
+  }
+}
 .shop-cart-view {
   position: relative;
   padding-left: 15px;
 
   .cart-customlocation {
     position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    color: #ffffff;
+    font-size: 15px;
     cursor: pointer;
+    background-color: $background-primary;
 
-    i {
-      font-size: 18px;
-      padding-right: 15px;
-    }
     .number-cart-product {
       display: inline-block;
       position: absolute;
       font-size: 12px;
       color: #ffffff;
-      top: -12px;
-      right: 0;
+      top: -10px;
+      right: -9px;
       width: 20px;
       height: 20px;
       line-height: 22px;
       text-align: center;
       background-color: $color-hover;
-      @include border-radius(50%)
     }
   }
-  .widget_shopping_cart {
-    position: absolute;
-    top: 120%;
+  .cart-view-box-widget {
+    position: fixed;
+    top: 0;
     right: 0;
-    width: 300px;
-    padding: 20px 15px;
+    bottom: 0;
+    width: 350px;
+    padding: 20px 30px;
     background-color: #ffffff;
-    z-index: 10;
+    z-index: 30;
     opacity: 0;
     visibility: hidden;
-    @include box-shadow( 0 0 15px -5px rgba(0, 0, 0, 0.4) );
+    @include box-shadow( 0 0 20px rgba(0,0,0,.2) );
+    @include transform(translateX(100%));
     @include transition( all 0.4s ease-in-out );
 
-    .widgettitle {
-      display: none;
+    &.active {
+      opacity: 1;
+      visibility: visible;
+      @include transform(translateX(0));
     }
-    .widget_shopping_cart_content {
-      .cart_list {
-        margin-bottom: 20px;
+    .cart-view-box__close {
+      width: 25px;
+      height: 25px;
+      position: relative;
+      margin: 20px 0;
+      -ms-flex-item-align: end;
+      align-self: flex-end;
+      cursor: pointer;
 
-        li {
-          padding: 0;
-          margin-bottom: 15px;
+      &:before,
+      &:after {
+        content: "";
+        position: absolute;
+        height: 3px;
+        width: 100%;
+        top: 50%;
+        left: 0;
+        margin-top: -1px;
+        background-color: #818a91;
+        @include border-radius(1px);
+      }
+      &:before {
+        @include transform(rotate(45deg));
+      }
+      &:after {
+        @include transform(rotate(-45deg));
+      }
+    }
+    .widget_shopping_cart {
+      .widgettitle {
+        display: none;
+      }
+      .widget_shopping_cart_content {
+        .cart_list {
+          margin-bottom: 20px;
 
-          &:last-child {
-            margin-bottom: 0;
-          }
-          a {
-            font-weight: 400;
+          li {
+            text-align: right;
+            padding: 0;
+            margin-bottom: 15px;
 
-            &.remove {
-              top: -3px;
-              left: auto;
-              right: 0;
-              width: auto;
-              height: auto;
-              font-size: 35px;
-              color: $color-primary !important;
-              line-height: inherit;
-              background-color: transparent;
-              @include flexbox();
-              @include align-items(center);
-              @include justify-content(center);
+            &:last-child {
+              margin-bottom: 0;
+            }
+            a {
+              font-weight: 400;
 
-              &:hover {
-                color: $color-hover !important;
+              &.remove {
+                top: 100%;
+                left: auto;
+                right: 0;
+                width: 22px;
+                height: 22px;
+                line-height: 20px;
+                text-align: center;
+                font-size: 18px;
+                color: #818a91 !important;
+                margin-top: -25px;
+                background-color: #ffffff;
+                border: 1px solid $border-color;
+                @include border-radius(50%);
+
+                &:hover {
+                  color: $color-hover !important;
+                  border-color: $color-hover;
+                }
+              }
+              img {
+                float: left;
+                margin: 0 20px 0 0;
+                width: 50px;
               }
             }
-            img {
-              float: left;
-              margin: 0 10px 0 0;
-              width: 50px;
+            span {
+              &.quantity {
+                display: inline-block;
+                margin-top: 10px;
+                padding-right: 35px;
+                color: #d4d4d4;
+                font-weight: 300;
+              }
+            }
+            .woocommerce-Price-amount {
+              font-weight: 600;
             }
           }
+        }
+        .woocommerce-mini-cart__total {
+          padding: 20px 0;
+          margin: 0;
+          text-align: center;
+          font-size: 20px;
+          font-weight: 600;
+          color: $color-second;
+          border-top: 2px solid $border-color;
+
           .woocommerce-Price-amount {
             font-weight: 700;
           }
         }
-      }
-      .woocommerce-mini-cart__total {
-        padding: 15px 0 0 0;
-        @include flexbox();
-        @include align-items(center);
-        @include justify-content(space-between);
+        .woocommerce-mini-cart__buttons {
+          border-top: 1px solid $border-color;
+          padding-top: 20px;
+          @include flexbox();
+          @include justify-content(space-between);
 
-        .woocommerce-Price-amount {
-          font-weight: 700;
-        }
-      }
-      .woocommerce-mini-cart__buttons {
-        &:before,
-        &:after {
-          display: none;
-        }
-        a {
-          padding: 0 40px;
-          line-height: 40px;
-          display: block;
-          text-align: center;
-          margin-bottom: 10px;
-
-          &:last-child {
-            margin-bottom: 0;
+          &:before,
+          &:after {
+            display: none;
+          }
+          a {
+            padding: 0 15px;
+            line-height: 40px;
+            display: inline-block;
+            text-align: center;
+            font-size: 16px;
+            color: #ffffff;
+            font-weight: 300;
+            margin: 0;
+            max-width: 48%;
+            background-color: #818a91;
+            @include border-radius(0);
+            @include flex(1);
           }
         }
       }
     }
   }
-  &:hover {
-    .widget_shopping_cart {
-      top: 100%;
-      opacity: 1;
-      visibility: visible;
-    }
-  }
+
 }
 .site-shop {
   padding: 50px 0;
