--- a/scss/elementor/elementor.scss
+++ b/scss/elementor/elementor.scss
@@ -15,6 +15,12 @@
 /* Best Selling Products */
 @import "best-selling-products";
 
+/* Product Brand */
+@import "product-brand";
+
+/* Product List */
+@import "product-list";
+
 /* Posts Grid */
 @import "post-grid";
 
