--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,8 @@ Text Domain: nhakhoa
   ## Slider
   ## Text Box
   ## Best Selling Products
+  ## Product Brand
+  ## Product List
   ## Posts Grid
   ## Posts Carousel
 # Woocommerce
@@ -74,12 +76,12 @@ Text Domain: nhakhoa
 /**
 # Sidebar
 -----------------------------------------------------------------------------*/
-@import "sidebar";
+//@import "sidebar";
 
 /**
 # Blog
 -----------------------------------------------------------------------------*/
-@import "blog/blog";
+//@import "blog/blog";
 
 /**
 # Elementor
@@ -104,7 +106,7 @@ Text Domain: nhakhoa
 /**
 # Footer
 -----------------------------------------------------------------------------*/
-@import "footer/footer";
+//@import "footer/footer";
 
 /**
 # Responsive
