--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,6 +35,7 @@ Text Domain: nhakhoa
   ## Product List
   ## Posts Grid
   ## Posts Carousel
+  ## Testimonial
 # Woocommerce
   ## Archive shop
   ## Single Shop
