--- a/scss/shop/_archive_shop.scss
+++ b/scss/shop/_archive_shop.scss
@@ -189,6 +189,15 @@ body {
 }
 .site-shop {
   padding: 50px 0;
+
+  .woocommerce-breadcrumb {
+    font-size: 14px;
+    margin: 0 0 20px;
+
+    a {
+      color: $color-title;
+    }
+  }
 }
 .site-shop__result-count-ordering {
   margin-bottom: 30px;
@@ -395,6 +404,7 @@ body {
                 display: none;
               }
               &.active {
+                z-index: 1;
                 background-color: #ff5555;
 
                 a {
