--- a/scss/shop/_other_page_shop.scss
+++ b/scss/shop/_other_page_shop.scss
@@ -116,6 +116,10 @@
       }
       p {
         display: inline-block;
+
+        &.comment-form-comment {
+          display: block;
+        }
       }
     }
   }
