--- a/scss/shop/_archive_shop.scss
+++ b/scss/shop/_archive_shop.scss
@@ -227,6 +227,9 @@ body {
   }
   span {
     &.onsale {
+      top: auto !important;
+      bottom: 25px;
+      right: 15px !important;
       min-width: auto;
       min-height: auto;
       line-height: inherit;
@@ -281,27 +284,37 @@ body {
           }
           .woocommerce-loop-product__title {
             padding: 0;
-            margin: 0 0 10px;
-            line-height: 1.5em;
-            height: 3em;
-            overflow: hidden;
+            margin: 0;
+            font-size: 15px;
+            text-transform: uppercase;
+            font-weight: 500;
 
             a {
               display: block;
+              color: $color-title;
             }
           }
           .price {
-            color: $color-hover;
-            font-size: 14px;
-            font-weight: $font-weight-bold;
+            margin: 0;
+            padding-top: 5px;
+            color: $color-link;
+            font-size: 15px;
+            font-weight: 400;
+            border-top: 1px solid $border-color;
+            @include flexbox();
+            @include align-items(center);
+            @include justify-content(space-between);
 
             del {
               display: inline-block;
-              font-size: 12px;
+              font-size: 14px;
+              color: $color-primary;
+              @include order(2);
             }
             ins {
               display: inline-block;
               text-decoration: none;
+              @include order(1);
             }
           }
           .button {
@@ -333,7 +346,16 @@ body {
             }
           }
           .star-rating {
-            margin: 0 auto 5px;
+            margin:0;
+            width: 7em;
+            font-size: 14px;
+            display: inline-block;
+            @include transform(translateY(2px));
+
+            &:before,
+            > span:before {
+              letter-spacing: 3.5px;
+            }
           }
         }
       }
@@ -467,8 +489,6 @@ body {
 }
 .site-shop__product--item {
   position: relative;
-  border: 1px solid #eeeeee;
-  text-align: center;
   @include flexbox();
   @include flex-direction(column);
   @include flex(1);
@@ -494,11 +514,17 @@ body {
   }
 }
 .site-shop__product--item-content {
-  padding: 10px 5px;
+  padding: 5px 0;
   @include flex(1 auto);
   @include flexbox();
   @include flex-direction(column);
 }
 .site-shop__product-add-to-cart {
   padding-bottom: 10px;
+}
+.no-rating {
+  i {
+    color: $color-link;
+    font-size: 14px;
+  }
 }
